ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-12-31 Daniel Andreca
	- GUI:
		* Fixed #1598: /reseller/domain-alias.php instead /reseller/alias.php in emailtpl-functions.php (thanks FEG)

2008-12-28 Daniel Andreca
	- CONFIGS:
		* Corrected fcgid configure file for Ubuntu
		* Introduced support for Ubuntu 8.10 - Interpid

2008-12-22 Daniel Andreca
	- GUI:
		* Fixed reseller update problems inconsistency between current_ftp_cnt and actual ftp count

2008-12-21 Daniel Andreca
	- GUI:
		* Small bug into template webtools.tpl

2008-12-20 Daniel Andreca
	- GUI:
		* Fixed #1591: Small bug into template - orderpanel - address.tpl
	- CONFIGS:
		* Getting ready for Debian 5.0 (lenny)

2008-12-17 Daniel Andreca
	- LANGUAGES:
		* Updated: Japanese
		* Allow aliases to share mount points (including with main domain)

2008-12-16 Daniel Andreca
	- ENGINE:
		* Fixed #1586: Alias Domains block proftpd restart

2008-12-15 Daniel Andreca
	- ENGINE:
		* Fixed #1587: Catch all after upgrade from RC5 to RC7 not working properly
		* Fixed #1585: Syntax error on line x of ispcp.conf
	- GUI:
		* Reseller statistics are not accessable for administrator

2008-12-14 Daniel Andreca
	- LANGUAGES:
		* Updated: Romanian
		* Updated: Italian

2008-12-13 Daniel Andreca
	- ENGINE:
		* Fixed: ERROR: Incorrect SQL Query -> Unknown collation: 'utf' in ispcp-arpl-msgr

2008-12-12 Benedikt Heintel
	- RELEASE ispCP ω Omega 1.0.0 RC7

2008-12-12 Benedikt Heintel
	- TOOLS:
		* Updated HTMLPurifier to version 3.2.0
		* Updated phpMyAdmin to version 3.1.1
	- LANGUAGES:
		* Added: Chinese (Hongkong)

2008-12-11 Daniel Andreca
	- GUI:
		* Ticket #1580: Modifying domain's traffic limit removes subdomain in ispcp.conf
	- DOCS:
		* Ticket #1581: OpenSUSE is now using zypper

2008-12-09 Daniel Andreca
	- GUI:
		* SQL passwords were not encrypted on critical update
		* Login problem is too many wrong password (big thanks Kika)

2008-12-08 Daniel Andreca
	- GUI: