@@ -562,6 +562,14 @@ sub collect_mail_traffic {
 			."/pop3d/ {print \$7,\$10,substr(\$11,1,length(\$11)-1);}'"
 			." 1>$pop3_log");
 		return $rs if ($rs != 0);
+		# POP3 accounting for Dovecot
+		# This should not harm in any way. If Courier / Dovecot is not used, the
+		# string will be empty and nothing will be written to the pop3_log.
+		$rs = sys_command("$cat $rlog|$grep 'POP3'| $grep 'Disconnected: Logged out' |"
+			."$awk '/POP3/ {split(\$10,array,\"\/\"); print \"user=\"substr(\$6,6,length(\$6)-7) "
+			."\", top=\"substr(array[2],0,length(array[2])) \", retr=\"substr(\$13,6,length(\$13)) ;}'"
+			." 1>$pop3_log");
+		return $rs if ($rs != 0);
 
 		$res = open(F, '<', $pop3_log);
 
